--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.2",
-    "shortid": "^2.2.8"
+    "shortid": "^2.2.8",
+    "password-generator": "^2.2.0"
   }
 }
