--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "serve-favicon": "~2.4.2",
     "shortid": "^2.2.8",
     "password-generator": "^2.2.0"
+  },
+  "devDependencies": {
+    "mongoose": "^5.3.13"
   }
 }
