--- a/package.json
+++ b/package.json
@@ -25,16 +25,14 @@
     "json2xls": "^0.1.2",
     "jsonwebtoken": "^8.1.0",
     "mongo": "^0.1.0",
-	"mongoose": "^5.3.13",
+    "mongoose": "^5.3.13",
     "morgan": "^1.9.1",
     "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.2",
     "shortid": "^2.2.8",
-    "password-generator": "^2.2.0"
+    "password-generator": "^2.2.0",
+    "nanoid": "^2.0.0"
   },
-  "devDependencies": {
-    "mongoose": "^5.3.13"
-  }
 }
