--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.3",
+    "chartjs-plugin-datalabels": "^0.4.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
@@ -28,11 +29,11 @@
     "mongoose": "^5.3.13",
     "morgan": "^1.9.1",
     "multer": "^1.3.0",
+    "nanoid": "^2.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "serve-favicon": "~2.4.2",
-    "shortid": "^2.2.8",
     "password-generator": "^2.2.0",
-    "nanoid": "^2.0.0"
+    "serve-favicon": "~2.4.2",
+    "shortid": "^2.2.8"
   }
 }
